--- a/Intro/Index.html
+++ b/Intro/Index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 
 <title>My First WebSite</title>
+<meta charset="utf-8">
 
 <h1>My First Page</h1>
-<h2>I love HTML</h2>
+<h2>안녕하세요</h2>
 <h3>GroundP...h3</h3>
 <h4>GroundP...h4</h4>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+<p>Lorem ipsum dolor sit <b>amet</b>, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
