--- a/Intro/Index.html
+++ b/Intro/Index.html
@@ -1,13 +1,77 @@
-<!DOCTYPE html>
+<html>
+	<!DOCTYPE html>
 
-<title>My First WebSite</title>
-<meta charset="utf-8">
+	<head>
+		<title>My First WebSite</title>
+		<meta charset="utf-8">
+		
+		<!--CSS-->
+		<style>
+		h1
+		{
+			font-size: 64px;
+			text-align: center;
+		} 
 
-<h1>My First Page</h1>
-<h2>안녕하세요</h2>
-<h3>GroundP...h3</h3>
-<h4>GroundP...h4</h4>
+		h3
+		{
+			margin-top: 100px; 
+		}
 
-<p>Lorem ipsum dolor sit <b>amet</b>, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		p b
+		{
+			font-size: 50px;
+		}
+
+		.third
+		{
+			font-size: 35px;
+		}
+
+		.red
+		{
+			color: red;
+		}
+
+		.blue
+		{
+			color: blue;
+		}
+		</style>
+	</head>
+
+	<body>
+		<h1>My First Page</h1>
+		<h2>안녕하세요</h2>
+		<h3>GroundP...h3</h3>
+		<h4>GroundP...h4</h4>
+
+		<p>Lorem ipsum dolor sit <b>amet</b>, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+		
+		<p class="first"> p태그 첫 번째 문단</p>
+		<p class="second red"> p태그 두 번째 문단</p>
+		<p class="third blue"> p태그 세 번째 문단</p>
+		<p class="first"> p태그 네 번째 문단</p>
+
+		<p>
+			<img src="https://image.fmkorea.com/files/attach/new/20160322/248116042/33219635/338917292/bf5ec20aa73e911ce09e877a7a8b5755.jpg" width="70%">
+		</p>
+
+		<p>
+			<img src="image1.jpg" width="400">
+		</p>
+
+		<p>
+			<a href="https://google.com" target="_blank">구글로 가는 링크 (a태그)입니다.</a>
+		</p>
+
+		<p>
+			<a href="SubPages/Page1.html">Page1</a>
+		</p>
+
+		<p>
+			<a href="SubPages/Page2.html">Page2</a>
+		</p>
+	</body>
+
+</html>
